modify(role): modify role card fields
